--- a/index.html
+++ b/index.html
@@ -10,4 +10,15 @@
     <p>turma: 1I - numero 06 </p>
 
   </body>
+  <div class="menuPrincipal" >
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="pagina01.html">pagina01</a></li>
+            <li><a href="pagina02.html">pagina02</a></li>
+        </ul>
+    </nav>
+
+</div>
+
 </html>
