--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-    <h1>minha pagina</h1>
-    <p>turma: 1I - numero 06 </p>
-
-  </body>
-  <div class="menuPrincipal" >
-    <nav>
+    <div class="menuprincipal">
+      <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="pagina01.html">pagina01</a></li>
-            <li><a href="pagina02.html">pagina02</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="pagina01.html">pagina01</a></li>
+          <li><a href="pagina02.html">pagina02</a></li>
         </ul>
-    </nav>
+      </nav>
+    </div>
+    
+  </body>
+  <div class="conteudo">
+    <h1></h1>
 
-</div>
+    <h2></h2>
+  </div>
+  <div class="rodape">
+    aluno:brendon - n:06 - primeiro i
+
+  </div>
+
 
 </html>
